# IC_2024_Cesar

./: .gitignore  CMakeLists.txt  ETS.ipynb  ETS_CGPT.py  ETS_sem_notebook.py  Gera_Dados.m  MCS_ETS_NLLS.m  MTS.py  NLLLS_func.py  NLLS.ipynb  NLLS_9Dcalib.m  NLLS_melhorado.py  NLLS_sem_notebook.py  cinematica.m  comp.m  derivadas_parciais2.m  execution_time_NLLS.py  simulacao_test1.slx  test1.m  test2.m  test_Eq_euler.slx  test_pd.csv  tira_teima.m
CubeIDE/: FK_main.c  calib.c  calib.h  dual_magnetometer_raw.c
Códigos em C/: CMakeLists.txt  ETS.c  NLLS.c  execution_time_ETS.c  execution_time_NLLS.c  functions.c  gera_dados.py  time_comparison.c  time_comparison.py
Dados/: Calib_param_ETS.csv  Calib_param_ETS_c.csv  Calib_param_ETS_m.csv  Calib_param_NLLS.csv  Calib_param_NLLS_c.csv  Calib_param_NLLS_m.csv  Calib_param_TW.csv  Calib_param_TW_c.csv  Calib_param_TW_m.csv  Dados_Corrompido.csv  Dados_Corrompido.mat  Dados_Corrompidos.mat  Dados_Corrompidos.xlsx  Dados_ETS_m.csv  Dados_NLLS_m.csv  Dados_TW_m.csv  Dados_Teoricos.csv  Dados_Teoricos.mat  Dados_rest_ETS.csv  Dados_rest_NLLS.csv  Dados_rest_TW.csv  Dif_norm.csv  Dif_norm_NLLS.csv  MCS_ETS.csv  MCS_ETS_Matlab.csv  MCS_ETS_Matlab_dist2.csv  MCS_ETS_Matlab_dist3.csv  MCS_ETS_Matlab_exe_time.csv  MCS_ETS_c.csv  MCS_ETS_c_64.csv  MCS_ETS_c_64_no_opt.csv  MCS_ETS_c_no_opt.csv  MCS_Matlab_exe_time_ig.csv  MCS_NLLS.csv  MCS_NLLS_Matlab.csv  MCS_NLLS_Matlab_IG.csv  MCS_NLLS_Matlab_dist.csv  MCS_NLLS_Matlab_dist2.csv  MCS_NLLS_Matlab_dist3.csv  MCS_NLLS_Matlab_exe_time.csv  (+48 more)
Dados_dist/: MCS_ETS_dist_Matlab.csv
MCS_atmega/: MCS_8bitMCU.mc3  calib.c  calib.h  main.c  mcc-manifest-autosave.yml  mcc-manifest-generated-success.yml
Matlab/: Batista_InitialGuess.m  Copy_of_FosterAnalytical_Rev00.m  Eq_Euler.m  FosterAnalytical_Rev00.m  Gera_Dados.asv  Gera_Dados.m  INSTRUCOES_USO.py  Initial_Guess.m  MCS_ETS_NLLS.asv  MCS_ETS_NLLS.m  NLLS_9Dcalib.m  NLLS_9Dcalib_full.m  NLLS_ST.m  NLLS_ST2.m  (+83 more)
Matlab/codegen/lib/test1/: CMakeLists.txt  CoderTimeAPI.c  CoderTimeAPI.h  codedescriptor.dmr  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h  test1.c  test1.h  test1_data.c  test1_data.h  test1_initialize.c  test1_initialize.h  test1_rtw.bat  test1_rtw.mk  test1_terminate.c  test1_terminate.h  test1_types.h  tic.c  tic.h  timeKeeper.c  timeKeeper.h  toc.c  toc.h
Matlab/codegen/lib/test1/examples/: main.c  main.h
Matlab/codegen/lib/test1/html/: report.mldatx
Matlab/codegen/lib/test1/interface/: _coder_test1_api.c  _coder_test1_api.h  _coder_test1_mex.c  _coder_test1_mex.h
ccodes/: CMakeLists.txt  ETS.c  FK  FK.c  FK.so,  MTS_c.py  NLLS.c  NLLS2.c  TRIAD_C_prop.py  TRIAD_C_prop_codegen.py  TRIAD_c.py  TWOSTEP.c  a.out  angulos_euler_graus.csv  atitude.c  atitude_fixed.c  dados.csv  debug_output.txt  determinantes.csv  erros_ortogonalidade.csv  functions.c  functions_64.c  ler_matrizes.py  ler_matrizes_triad.py  ler_matrizes_triad_correto.py  matrizes_triad_reorganizadas.npy  plot_TS.py  propagador_FK.c  propagador_FK.h  test_debug.py  test_fixed.py  test_quaternion.csv  teste.c  time_comparison.py  toolchain.cmake  validação_FK_only.py  validação_estimador.py  validação_estimador_PT_prop_mat.py  validação_estimador_TRIAD.py  validação_estimador_q_obs.py  (+2 more)
ccodes/10prop1est/: TRIAD_C_prop.py  validação_FK_completo_c.py  validação_estimador.py  validação_propagador.py  validação_tudo_menos_PT_prop.py
ccodes/Parte1_Teste2/: validação_FK_completo_c.py
ccodes/Parte2_Teste1/: validação_FK_completo_c.py
ccodes/Parte2_Teste1b/: functions.c  validação_FK_completo_c.py
ccodes/Parte2_Teste2/: FK.c  validação_FK_completo_c.py
ccodes/Parte2_Teste2b/: functions.c  validação_FK_completo_c.py
(+80812 files in other folders)
